# MReT

./: .gitignore  main.py  pyproject.toml
src/data/: README.md  build_arc_dataset.py  build_maze_dataset.py  build_sudoku_dataset.py  common.py
