[project]
name = "mret_arc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argdantic>=1.3.3",
    "huggingface-hub>=1.1.7",
    "numpy>=2.3.5",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
